[package]
name = "CallNative"
version = "0.1.0"
authors = ["hxq"]
edition = "2018"

[lib]
name = "CallNative"
crate-type = ["staticlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
http = "0.2.4"
futures = "0.3"
anyhow = "1.0"
libc = "*"
serde_urlencoded = "0.7.0"
form_urlencoded = "1.0.1"
rayon = "1.5.1"